--- a/style.css
+++ b/style.css
@@ -21,13 +21,13 @@
 }
 
 .header input {
-  width: 400px;
+  width: 380px;
   margin-top: 10px;
-  padding: 25px;
+  padding: 22px;
   border: none;
   outline: none;
   color: white;
-  font-size: 30px;
+  font-size: 50px;
   align-items: center;
   align-self: center;
   background-color: rgba(30, 86, 112, 0.938);
@@ -36,22 +36,27 @@
 .btn_wrap {
   display: flex;
   flex-wrap: wrap;
-  margin-top: 20px;
+  margin-top: 25px;
   justify-content: center;
 }
 
 .btn {
-  width: 70px;
-  height: 70px;
-  margin: 15px;
-  font-size: 50px;
+  width: 65px;
+  height: 65px;
+  margin: 13px;
+  font-size: 40px;
   background-color: white;
   border: none;
   cursor: pointer;
 }
 
+.btn:nth-child(15) {
+  background-color: green;
+  color: white;
+}
+
 .btn:hover {
-  background-color: black;
+  background-color: rgba(30, 86, 112, 0.938);
   color: white;
   transition: all 0.5s;
 }
